# cuGrayScott

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
docs/: gray_scott_theory.tex  phase1_naiveKernel_architecture.md  phase2_shared_mem_architecture.md  phase3_async_architecture.md  phase4_full_async_architecture.md
scripts/: render.py
src/: io_utils.hpp  main.cpp  solver.cu  solver.cuh  utils.hpp
src/common/: io_utils.hpp  parameters.hpp  timer.hpp  utils.hpp
src/phase1_naive/: main.cpp  solver.cu  solver.cuh
src/phase2_shared_mem/: main.cpp  solver.cu
src/phase3_async/: main.cpp  solver.cu  solver.cuh
src/phase4_full_async/: main.cpp  solver.cu
